Progress on website overhaul

--- a/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
@@ -97,11 +97,11 @@
                         <p>The set of rules used to check your code is highly configurable. A Checkstyle configuration
                             specifies which check rules are validated against your code and with which severity
                             violations will be reported. Once defined a Checkstyle configuration can be used across
-                            multiple projects. The plugin comes with several pre-defined Check Configuration.<br/> You
-                            can create custom Checkstyle configurations using the plugin's Checkstyle configuration
-                            editor or even use an existing Checkstyle configuration file from an external
-                            location.<br/>A short introduction into creating your own Checkstyle configurations can be
-                            found <a href="#!custom-config">here</a>.</p>
+                            multiple projects. The plugin comes with several pre-defined Checkstyle configurations.<br/>
+                            You can create custom configurations using the plugin's Checkstyle configuration editor or
+                            even use an existing Checkstyle configuration file from an external location.<br/>A short
+                            introduction into creating your own Checkstyle configurations can be found <a
+                                href="#!custom-config">here</a>.</p>
                     </div>
                 </div>
             </div>
