--- a/net.sf.eclipsecs.doc/src/main/resources/css/style.css
+++ b/net.sf.eclipsecs.doc/src/main/resources/css/style.css
@@ -1,10 +1,3 @@
-@media (max-width: 979px) {
-    /* Remove any padding from the body */
-    body {
-      padding-top: 0;
-    }
-}
-
 html, body {
     height: 100%;
     /* The html and body elements cannot have any padding or margin. */
@@ -16,14 +9,7 @@ html, body {
     height: auto !important;
     height: 100%;
     /* Negative indent footer by it's height */
-    margin: 0 auto -60px;
-}
-
-#adcontainer {
-    margin-bottom: 10px;
-}
-
-#ad {
+    margin: 0 auto -80px;
 }
 
 #main {
@@ -37,7 +23,7 @@ html, body {
 
 /* Set the fixed height of the footer here */
 #push, #footer {
-    height: 60px;
+    height: 80px;
 }
 #footer {
     background-color: #f5f5f5;
@@ -47,16 +33,47 @@ html, body {
     margin: 10px 0;
 }
 
-/* Lastly, apply responsive CSS fixes as necessary */
-@media (max-width: 767px) {
-    #footer {
-        margin-left: -20px;
-        margin-right: -20px;
-        padding-left: 20px;
-        padding-right: 20px;
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+
+    #wrap {
+        margin: 0 auto -80px;
+    }
+
+    #main {
+        padding-top: 110px;
+    }
+
+    #push, #footer {
+        height: 80px;
     }
 
     #footer .credit {
         margin: 10px 0;
     }
 }
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+
+    #wrap {
+        margin: 0 auto -60px;
+    }
+
+    #main {
+        padding-top: 60px;
+    }
+
+    #push, #footer {
+        height: 60px;
+    }
+
+    #footer .credit {
+        margin: 10px 0;
+    }
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+}
+
