--- a/net.sf.eclipsecs.doc/src/main/resources/partials/builtin-config.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/builtin-config.html
@@ -2,7 +2,7 @@
     <div data-google-ad="" class="container"> </div>
     <hr/>
     <h1>Provide a custom built-in configuration</h1>
-    <p>By providing a <a href="#!extensions">extension plugin</a> the eclipse-cs enables you to roll out a immutable
+    <p>By providing a <a href="#!/extensions">extension plugin</a> the eclipse-cs enables you to roll out a immutable
         Checkstyle configuration to your team members.<br/> This is especially powerful if you distribute your plugin
         via a corporate update site</p>
     <p>You can provide such a built-in configuration by the use of the <code>net.sf.eclipsecs.core.configurations</code>
