--- a/net.sf.eclipsecs.doc/src/main/resources/partials/custom-checks.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/custom-checks.html
@@ -7,7 +7,7 @@
                 class="fa fa-external-link"> </i></a> . <br/> To hook your checks into the eclipse-cs plugin you need to
         provide them as a extension plugin. </p>
     <p> In the further steps I am - for the sake of simplicity - assuming that you start off with the <a
-            href="#!extensions">sample plugin</a> the eclipse-cs project provides. <br/> If not then you are supposedly
+            href="#!/extensions">sample plugin</a> the eclipse-cs project provides. <br/> If not then you are supposedly
         proficient enough with eclipse plugin development that you figure on your own.</p>
     <p>If done correctly, you even will be able to use your plugin jar file for adding your custom checks to a
         Checkstyle Ant/Maven/CmdLine target - without the need for further modification.</p>
