--- a/net.sf.eclipsecs.doc/src/main/resources/partials/custom-config.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/custom-config.html
@@ -20,7 +20,7 @@
             </p>
             <p><img src="images/default_preferences.png" alt="Checkstyle preferences"/>
                 <br/> The Checkstyle preferences should look like this. In the upper area are some general settings
-                which will be explained <a href="#!preferences">later in detail</a>.<br/> The center/bottom area shows
+                which will be explained <a href="#!/preferences">later in detail</a>.<br/> The center/bottom area shows
                 the Checkstyle configurations known to the plug-in. Only Checkstyle Configurations that are listed
                 therein can be used with the plug-in. <br/> Note the <i>Sun Checks</i> configuration which we used in
                 the previous chapter as check configuration for our project. <br/>
