--- a/net.sf.eclipsecs.doc/src/main/resources/partials/custom-filters.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/custom-filters.html
@@ -7,7 +7,7 @@
     <p><img src="images/properties_simple_checked.png" alt="Checkstyle project properties"/>
         <br/> If filters are activated for a project they exclude certain files of the project from the checks based on
         their specific implementation.</p>
-    <p>Many useful filters are <a href="#!filters">already coming</a> with the plug-in distribution.<br/> However you
+    <p>Many useful filters are <a href="#!/filters">already coming</a> with the plug-in distribution.<br/> However you
         may need to implement other filters that are very specific to your environment.</p>
     <p>To enable you to write your own filters the plug-in defines an extension point for filters
             <code>net.sf.eclipsecs.core.filters</code>. <br/>
