--- a/net.sf.eclipsecs.doc/src/main/resources/partials/extensions.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/extensions.html
@@ -5,12 +5,12 @@
     <p>The Checkstyle core and the eclipse-cs plugin can be extended to add one or more of the following artifacts: </p>
     <ul>
         <li>
-            <a href="#!custom-checks">Custom Checkstyle checks</a>
+            <a href="#!/custom-checks">Custom Checkstyle checks</a>
         </li>
-        <li><a href="#!builtin-config">Built-in Checkstyle configurations</a>, great for deployment of company wide
+        <li><a href="#!/builtin-config">Built-in Checkstyle configurations</a>, great for deployment of company wide
             rulesets.</li>
         <li>
-            <a href="#!custom-filters">Custom plugin filters</a>
+            <a href="#!/custom-filters">Custom plugin filters</a>
         </li>
     </ul>
     <p>As a starting point all extensions to eclipse-cs must be provided in the form of an Eclipse plugin. This way you
