--- a/net.sf.eclipsecs.doc/src/main/resources/partials/filters.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/filters.html
@@ -30,7 +30,7 @@
                 <td>This filter is enabled by default. Some projects have java sources outside of source folders (for
                     instance build folders where all sources are copied to for source distribution builds). <br/> With
                     this filter you can exclude this files from the checks. Again, this can be also achieved by <a
-                        href="#!filesets">configuring file sets</a> - but for most cases the filter is easier to
+                        href="#!/filesets">configuring file sets</a> - but for most cases the filter is easier to
                     use.</td>
             </tr>
             <tr>
@@ -56,7 +56,7 @@
             <tr>
                 <td>Files from packages</td>
                 <td>This is a configurable filter, allowing you to specify the packages you want to exclude from
-                    checking. You can, of course, get the same result by <a href="#!filesets">configuring file sets</a>,
+                    checking. You can, of course, get the same result by <a href="#!/filesets">configuring file sets</a>,
                     but this variant is much more practical.</td>
             </tr>
             <tr>
@@ -73,6 +73,6 @@
     </table>
 
     <p>The Eclipse Checkstyle Plugin provides an extension point for customer filters which can be used to implement
-        your own filter. Read <a href="#!custom-filters">here</a> for more info about <a href="#!custom-filters"
+        your own filter. Read <a href="#!/custom-filters">here</a> for more info about <a href="#!/custom-filters"
             >extending the plugin with filters</a> .</p>
 </div>
