--- a/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
@@ -21,7 +21,7 @@
                     <small><sup>1 </sup>Install via Eclipse Marketplace. Drag and drop this link into a running Eclipse
                         Indigo/Kepler/Luna workspace</small>
                     <br/>
-                    <small><sup>2 </sup>Latest release 5.8.0, based on Checkstyle 5.8, see <a href="#!releasenotes"
+                    <small><sup>2 </sup>Latest release 5.8.0, based on Checkstyle 5.8, see <a href="#!/releasenotes"
                             >release notes</a></small>
                 </div>
                 <div id="award-badge" class="col-md-2 panel panel-default" style="margin-top: 20px;">
@@ -100,7 +100,7 @@
                             very much like a compiler but instead of producing <em>.class</em> files it produces
                             warnings where your code violates the Checkstyle rules. The discovered deviations are
                             accessible in the Eclipse Problems View, as code editor annotations and via additional
-                            Checkstyle violations views.<br/>Learn <a href="#!project-setup">here</a> how to activate
+                            Checkstyle violations views.<br/>Learn <a href="#!/project-setup">here</a> how to activate
                             Checkstyle for a project.</p>
                     </div>
                     <div class="col-md-6">
@@ -111,7 +111,7 @@
                             configurations.<br/> You can create custom configurations using the plugin's Checkstyle
                             configuration editor or even use an existing Checkstyle configuration file from an external
                             location.<br/>A short introduction into creating your own Checkstyle configurations can be
-                            found <a href="#!custom-config">here</a>.</p>
+                            found <a href="#!/custom-config">here</a>.</p>
                     </div>
                 </div>
             </div>
