--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/5.0.0final/release_notes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/5.0.0final/release_notes.html
@@ -9,8 +9,8 @@
         <li>Support for Checkstyle 5.0 custom check messages, allowing to redefine generic Checkstyle messages</li>
         <li>Experimental m2eclipse->eclipse-cs synchronisation, allowing the eclipse-cs plugin project configuration to
             be automatically derived from the Maven Checkstyle settings in the project POM</li>
-        <li>Changed how custom Checkstyle extensions are to be integrated with eclipse-cs. Read <a href="#!extensions"
-                >here</a> and <a href="#!custom-checks">here</a>. Existing extension fragments for 4.4.x plugin version
+        <li>Changed how custom Checkstyle extensions are to be integrated with eclipse-cs. Read <a href="#!/extensions"
+                >here</a> and <a href="#!/custom-checks">here</a>. Existing extension fragments for 4.4.x plugin version
             need to be adapted.</li>
         <li>Dropped german and french translations until a clean and workable solution for providing language packs is
             worked out</li>
