--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/5.6.0/release_notes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/5.6.0/release_notes.html
@@ -4,7 +4,7 @@
         <br/> Other changes: <br/> The plugins internal handling of extension plugins has been changed to not rely on
         buddy-classloading anymore. Immediate action from extension providers is not required since the old way of
         intergration still works. However, certain usecases (providing custom quickfixes) only work with the new way of
-        setup. <br/> Please check out the updated docs <a href="#!custom-checks">here</a> . The sample extension project
+        setup. <br/> Please check out the updated docs <a href="#!/custom-checks">here</a> . The sample extension project
         in CVS has been updated as well. <br/>
         <br/> I have given the plugin a short spin on the "new" Juno release of Eclipse (4.2), which seemed to work fine
         so far. </p>
