--- a/net.sf.eclipsecs.doc/src/main/resources/partials/filesets.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/filesets.html
@@ -2,7 +2,7 @@
     <div data-google-ad="" class="container"> </div>
     <hr/>
     <h1>Configuring file sets</h1>
-    <p>In the <a href="#!project-setup">getting started section</a> we configured our project using the simple
+    <p>In the <a href="#!/project-setup">getting started section</a> we configured our project using the simple
         configuration approach. <br/> With the simple configuration all files in your project get checked by the same
         check configuration.</p>
     <p><img src="images/properties_simple_checked.png" alt="Checkstyle Properties Page"/>
