--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/release_notes_older.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/release_notes_older.html
@@ -131,7 +131,7 @@
             anymore. Be sure to check out the updated documentation.</li>
         <li><b>Important Note:</b> The eclipse-cs update site is now officially released. Using the update mechanism of
             Eclipse can save you the hassle of a by hand install. Be sure to check out the documentation on <a
-                href="#!install">eclipse-cs</a> for more detail.</li>
+                href="#!/install">eclipse-cs</a> for more detail.</li>
     </ul>
     <h4>Bugs resolved:</h4>
     <ul>
