--- a/net.sf.eclipsecs.doc/src/main/resources/partials/custom-checks.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/custom-checks.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div data-google-ad="" class="container"> </div>
-    <hr/>
+    <div data-google-ad=""> </div>
+
     <h1>Providing custom Checkstyle checks</h1>
     <p> One great feature of Checkstyle is its extentablity. You can easily write own checks as explained <a
             target="_blank" href="http://checkstyle.sourceforge.net/writingchecks.html">here <i
