--- a/net.sf.eclipsecs.doc/src/main/resources/partials/extensions.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/extensions.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div data-google-ad="" class="container"> </div>
-    <hr/>
+    <div data-google-ad=""> </div>
+
     <h1>Extending the Eclipse Checkstyle Plugin</h1>
     <p>The Checkstyle core and the eclipse-cs plugin can be extended to add one or more of the following artifacts: </p>
     <ul>
