--- a/net.sf.eclipsecs.doc/src/main/resources/partials/filesets.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/filesets.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div data-google-ad="" class="container"> </div>
-    <hr/>
+    <div data-google-ad=""> </div>
+
     <h1>Configuring file sets</h1>
     <p>In the <a href="#!/project-setup">getting started section</a> we configured our project using the simple
         configuration approach. <br/> With the simple configuration all files in your project get checked by the same
