--- a/net.sf.eclipsecs.doc/src/main/resources/partials/filters.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/filters.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div data-google-ad="" class="container"> </div>
-    <hr/>
+    <div data-google-ad=""> </div>
+
     <h1>Restrict Checkstyle validation using project filters</h1>
     <p>The Eclipse Checkstyle Pluin contains a filter facility to exclude certain files from Checkstyle. <br/> Knowing
         that the plug-in allows you to configure file sets you might ask why there are also filters. <br/> This feature
