--- a/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
@@ -43,10 +43,9 @@
         </div>
     </div>
 
-    <div data-google-ad="" class="container"> </div>
+    <div data-google-ad=""> </div>
 
     <div class="container">
-        <hr/>
         <div class="row">
             <div class="col-md-4">
                 <h2>What is it?</h2>
@@ -134,7 +133,7 @@
                 <div class="row">
                     <div class="col-md-5">
                         <div class="thumbnail">
-                            <img src="/images/members/Lars.jpg" alt="Lars Ködderitzsch" class="img-thumbnail"/>
+                            <img src="images/members/Lars.jpg" alt="Lars Ködderitzsch" class="img-thumbnail"/>
                             <div class="caption" style="padding-bottom: 12px">
                                 <h3>Lars Ködderitzsch</h3>
                                 <p>Developer, project admin, project website</p>
