--- a/net.sf.eclipsecs.doc/src/main/resources/partials/properties.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/properties.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div data-google-ad="" class="container"> </div>
-    <hr/>
+    <div data-google-ad=""> </div>
+
     <h1>Property expansion in Checkstyle configuration files</h1>
     <p>Checkstyle contains a <a target="_blank" href="http://checkstyle.sourceforge.net/config.html#Properties">feature
                 <i class="fa fa-external-link"> </i></a> that lets you define module properties in a way that they can
