--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/4.2.0/release_notes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/4.2.0/release_notes.html
@@ -8,8 +8,8 @@
             <p>A new context menu action ('Apply Checkstyle fixes') was added to the Java editor and other views (e.g.
                 Package Explorer) which - when invoked - tries to apply all existing quickfixes to the Checkstyle
                 violations in the selected file.</p>
-            <img alt="New Apply Checkstyle fixes action" src="/partials/releases/4.2.0/quickfixes_before.jpg"/>
-            <img alt="New Apply Checkstyle fixes action result" src="/partials/releases/4.2.0/quickfixes_after.jpg"/>
+            <img alt="New Apply Checkstyle fixes action" src="partials/releases/4.2.0/quickfixes_before.jpg"/>
+            <img alt="New Apply Checkstyle fixes action result" src="partials/releases/4.2.0/quickfixes_after.jpg"/>
             <p> Additionaly new quickfixes were implemented for the following Checkstyle checks: </p>
             <ul>
                 <li>FinalLocalVariable</li>
@@ -34,7 +34,7 @@
             <p>Tell us and other users what you like or like not about the Eclipse Checkstyle Plugin by voting on
                 EclipsePluginCentral. To ease this up the plugin now contains a voting client, which sends the votes to
                 EclipsePluginCentral.</p>
-            <img alt="New EPC voting client" src="/partials/releases/4.2.0/voting.jpg"/>
+            <img alt="New EPC voting client" src="partials/releases/4.2.0/voting.jpg"/>
         </li>
     </ul>
     <h3>Bugfixes</h3>
