--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/4.3.2/release_notes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/4.3.2/release_notes.html
@@ -19,7 +19,7 @@
             <p>When using the SuppressionFilter the id property can be used to distinguish different instances of the
                 same Checkstyle module. The Configuration editor now supports mananging the id property.<br/>
                 <br/>
-                <img alt="id property support" src="/partials/releases/4.3.2/idproperty.jpg"/>
+                <img alt="id property support" src="partials/releases/4.3.2/idproperty.jpg"/>
             </p>
         </li>
         <li>
@@ -30,13 +30,13 @@
                 module.<br/>Note that if you have multiple instances of the same module in your configuration and want
                 to have each of these modules different custom messages you are required to use the id property (see
                 above) to distinguish the module instances.<br/>
-                <img alt="Custom message support" src="/partials/releases/4.3.2/custommessage.jpg"/></p>
+                <img alt="Custom message support" src="partials/releases/4.3.2/custommessage.jpg"/></p>
         </li>
         <li>
             <p>Enhanced Violations Chart View</p>
             <p>The Violations Chart View was beefed up a bit by adding a details view to drill down into the violations
                 category.<br/>Just double-click on a pie slice to drill down.<br/><img alt="Drill-Down-Chart"
-                    src="/partials/releases/4.3.2/drilldownchart.jpg"/></p>
+                    src="partials/releases/4.3.2/drilldownchart.jpg"/></p>
         </li>
     </ul>
     <h3>Bugfixes</h3>
