--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/5.1.1/release_notes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/5.1.1/release_notes.html
@@ -6,7 +6,7 @@
     <p>To enable this new feature set the new option in the Checkstyle project properties, after setting this the plugin
         will continuously synchronize changes in the projects Checkstyle configuration into the code formatter/cleanup
         settings. <br/>
-        <img src="/partials/releases/5.1.1/syncfeature.png" alt="New formatter syncronization feature"/>
+        <img src="partials/releases/5.1.1/syncfeature.png" alt="New formatter syncronization feature"/>
     </p>
     <p>On a sidenote we have registered the eclipse-cs project with the new <a href="http://flattr.com">flattr</a>
         Social Micropayment platform.<br/> If you feel like spreading some love for this plugin please hook up with
