--- a/net.sf.eclipsecs.doc/src/main/resources/partials/builtin-config.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/builtin-config.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div data-google-ad="" class="container"> </div>
-    <hr/>
+    <div data-google-ad=""> </div>
+
     <h1>Provide a custom built-in configuration</h1>
     <p>By providing a <a href="#!/extensions">extension plugin</a> the eclipse-cs enables you to roll out a immutable
         Checkstyle configuration to your team members.<br/> This is especially powerful if you distribute your plugin
