--- a/net.sf.eclipsecs.doc/src/main/resources/partials/configtypes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/configtypes.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div data-google-ad="" class="container"> </div>
-    <hr/>
+    <div data-google-ad=""> </div>
+
     <h1>Configuration types</h1>
     <p>The Eclipse Checkstyle Plugin uses plain standard Checkstyle configuration files. For easier reuse of existing
         Checkstyle configurations and to support some common use cases different Configuration types were introduced
