--- a/net.sf.eclipsecs.doc/src/main/resources/partials/custom-filters.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/custom-filters.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div data-google-ad="" class="container"> </div>
-    <hr/>
+    <div data-google-ad=""> </div>
+
     <h1>Custom plugin filters</h1>
     <p>As you surely know by now, the Eclipse Checkstyle Plug-in sports filters to exclude files from the checks.<br/>
         These filters are available on the plug-ins project properties page.</p>
