--- a/net.sf.eclipsecs.doc/src/main/resources/partials/preferences.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/preferences.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div data-google-ad="" class="container"> </div>
-    <hr/>
+    <div data-google-ad=""> </div>
+
     <h1>Advanced Preference Settings</h1>
     <p>This page explains the meaning of the other preferences on the plugin's preference page.</p>
     <p>
