--- a/net.sf.eclipsecs.doc/src/main/resources/partials/project-setup.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/project-setup.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div data-google-ad="" class="container"> </div>
-    <hr/>
+    <div data-google-ad=""> </div>
+
     <h1>Setting up a project</h1>
     <p>To get your files checked by Checkstyle there are a few simple steps set up the Checkstyle plug-in for your
         project.</p>
