--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/6.1.0/release_notes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/6.1.0/release_notes.html
@@ -2,8 +2,8 @@
     <p> Integrates Checkstyle 6.1 plus a few bugfixes. Checkstyle 6.0 has been skipped due to tight release succession
         and some connected issues.</p>
     <p>Please note that as of this version Java 6 is the minimum runtime environment supported. This requires you to run
-        Eclipse on a Java 6 (or greater) JVM in order to use this plugin.</p>
-    <p>This restriction does not affect the ability to analyse Java 5 or lower level source code.</p>
+        Eclipse on a Java 6 (or newer) JVM in order to use this plugin version.</p>
+    <p>This restriction does not affect the ability to analyze Java 5 or lower level source code.</p>
     <h3>Bugfixes</h3>
     <ul>
         <li>
