Adapt to Checkstyle 6.1.1 and prepare release

--- a/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
@@ -21,7 +21,7 @@
                     <small><sup>1 </sup>Install via Eclipse Marketplace. Drag and drop this link into a running Eclipse
                         Indigo/Kepler/Luna workspace</small>
                     <br/>
-                    <small><sup>2 </sup>Latest release 6.1.0, based on Checkstyle 6.1, see <a href="#!/releasenotes"
+                    <small><sup>2 </sup>Latest release 6.1.1, based on Checkstyle 6.1.1, see <a href="#!/releasenotes"
                             >release notes</a></small>
                 </div>
                 <div id="award-badge" class="col-md-2 panel panel-default" style="margin-top: 20px;">
@@ -125,6 +125,11 @@
                     Checkstyle checks.<br/> These checks directly integrate with the eclipse-cs plug-in and can be
                     installed from the following update site: </p>
                 <code>http://sevntu-checkstyle.github.com/sevntu.checkstyle/update-site/</code>
+
+                <h5 class="text-danger"><i class="fa fa-exclamation-triangle"> </i> Please note:</h5>
+                <p class="text-danger">Due to changes introduced with Checkstyle 5.9 and onwards the sevntu-checkstyle
+                    extensions are currently incompatible with Checkstyle versions > 5.9, hence also incompatible with
+                    the eclipse-cs plugin 5.9.0 and later.</p>
             </div>
         </div>
         <div class="row">
