--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/6.2.0/release_notes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/6.2.0/release_notes.html
@@ -9,4 +9,14 @@
         those checks/options adaptations will be required in order to use your configuration with this
         version.<br/>Please read the <a target="_blank" href="http://checkstyle.sourceforge.net/releasenotes.html"
             >Checkstyle release notes</a> for details.</p>
+    <h3>Bugfixes</h3>
+    <ul>
+        <li>
+            <a href="https://sourceforge.net/p/eclipse-cs/bugs/373/">#373 Derived resources are checked </a>
+        </li>
+        <li>
+            <a href="https://sourceforge.net/p/eclipse-cs/bugs/377/">#377 RegexpHeader and SuppressionCommentFilter not
+                behaving as CLI does </a>
+        </li>
+    </ul>
 </div>
