--- a/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
@@ -8,7 +8,7 @@
                     <p style="margin-bottom: 5px;">
                         <a class="btn btn-primary btn-outline-inverse btn-lg" target="_blank"
                             href="http://marketplace.eclipse.org/marketplace-client-intro?mpc_install=150"
-                            title="Drag and drop this link into a running Eclipse Indigo/Kepler/Luna workspace to install the Eclipse Checkstyle Plugin"
+                            title="Drag and drop this link into a running Eclipse Indigo/Juno/Kepler/Luna/Mars workspace to install the Eclipse Checkstyle Plugin"
                                 ><i class="fa fa-plug"> </i> Install <sup>1</sup></a>
                         <a class="btn btn-primary btn-outline-inverse btn-lg" target="_blank"
                             href="https://sourceforge.net/projects/eclipse-cs/files/latest/download"
@@ -19,9 +19,9 @@
                             title="Browse/clone code at SourceForge"><i class="fa fa-code"> </i> Code</a>
                     </p>
                     <small><sup>1 </sup>Install via Eclipse Marketplace. Drag and drop this link into a running Eclipse
-                        Indigo/Kepler/Luna workspace</small>
+                        Indigo/Juno/Kepler/Luna/Mars workspace</small>
                     <br/>
-                    <small><sup>2 </sup>Latest release 6.5.0, based on Checkstyle 6.5, see <a href="#!/releasenotes"
+                    <small><sup>2 </sup>Latest release 6.8.0, based on Checkstyle 6.8.1, see <a href="#!/releasenotes"
                             >release notes</a></small>
                 </div>
                 <div id="award-badge" class="col-md-2 panel panel-default" style="margin-top: 20px;">
