--- a/net.sf.eclipsecs.doc/src/main/resources/partials/install.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/install.html
@@ -14,7 +14,7 @@
                         ><i class="fa fa-plug"> </i> Install </a>
             </p>
             <ol>
-                <li>Drag&amp;Drop the link above to a running Eclipse Indigo/Kepler/Luna instance. This will trigger the
+                <li>Drag&amp;Drop the link above to a running Eclipse Indigo/Juno/Kepler/Luna/Mars instance. This will trigger the
                     Eclipse Marketplace client with the Eclipse Checkstyle Plugin being pre-selected for
                     installation.</li>
                 <li>Confirm the selection of features to install</li>
@@ -65,7 +65,7 @@
             <ol>
                 <li>Download a Eclipse Checkstyle Plugin update site bundle</li>
                 <li>Within Eclipse go to: <em>Help -> Install New Software...</em></li>
-                <li>Press <em>Add...</em>, then <em>Archive...</em>, selected the downloaded file</li>
+                <li>Press <em>Add...</em>, then <em>Archive...</em>, select the downloaded file</li>
                 <li>Select the Eclipse Checkstyle Plugin feature to install</li>
                 <li>Conclude the installation as described above</li>
             </ol>
