--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/7.2.0/release_notes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/7.2.0/release_notes.html
@@ -17,5 +17,6 @@
     <h3>Bugfixes</h3>
     <ul>
         <li><a href="https://sourceforge.net/p/eclipse-cs/bugs/411/">#411 Rule group description is not shown in UI</a></li>
+        <li><a href="https://sourceforge.net/p/eclipse-cs/bugs/410/">#410 Custom checks XML not loaded if plug-in does not use bundle shape dir</a></li>
     </ul>
 </div>
