Disable jgit build timestamp since it appears not to be working correctly - different timestamps for the subprojects

--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/8.5.0/release_notes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/8.5.0/release_notes.html
@@ -39,5 +39,8 @@
         <li>
             <a href="https://sourceforge.net/p/eclipse-cs/bugs/424/">#424 java.lang.NullPointerException when trying to run checkstyle</a>
         </li>
+        <li>
+            <a href="https://sourceforge.net/p/eclipse-cs/bugs/420/">#420 ClassCastException: net.sf.eclipsecs.ui.actions.PurgeCachesAction cannot be cast</a>
+        </li>
     </ul>
 </div>
