advertise additional checks
Have a reference to the update site of the additional checks in our
update site. That way it is automatically added to the list of known
update sites in the local P2 update manager. However, it is initially
disabled, and must be enabled manually by the user (so no additional
checks get installed by this change).

Also change the update site URL inside the update site description
(there is actually no field in the form based category editor showing
this property).

--- a/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
@@ -211,7 +211,7 @@
                     installed from the following
                     update site:
                 </p>
-                <code>http://sevntu-checkstyle.github.com/sevntu.checkstyle/update-site/</code>
+                <code>https://sevntu-checkstyle.github.com/sevntu.checkstyle/update-site/</code>
             </div>
         </div>
         <div class="row">
