--- a/docs/partials/index.html
+++ b/docs/partials/index.html
@@ -8,7 +8,7 @@
                     <p style="margin-bottom: 5px;">
                         <a class="btn btn-primary btn-outline-inverse btn-lg" target="_blank"
                             href="http://marketplace.eclipse.org/marketplace-client-intro?mpc_install=150"
-                            title="Drag and drop this link into a running Eclipse Indigo/Juno/Kepler/Luna/Mars workspace to install the Eclipse Checkstyle Plugin">
+                            title="Drag and drop this link into a running Eclipse Indigo/Juno/Kepler/Luna/Mars/Neon/Oxygen workspace to install the Eclipse Checkstyle Plugin">
                             <i class="fa fa-plug">
                             </i>
                             Install
@@ -23,7 +23,7 @@
                         </a>
                         <a class="btn btn-default btn-outline-inverse btn-lg" target="_blank"
                             href="https://github.com/checkstyle/eclipse-cs" title="Browse/clone code at Github">
-                            <i class="fa fa-github">
+                            <i class="fa fa-code">
                             </i>
                             Code
                         </a>
@@ -36,7 +36,7 @@
                     <br />
                     <small>
                         <sup>2 </sup>
-                        Latest release 8.7.0, based on Checkstyle 8.7, see
+                        Latest release 8.8.0, based on Checkstyle 8.8, see
                         <a href="#!/releasenotes">release notes</a>
                     </small>
                 </div>
