--- a/docs/partials/index.html
+++ b/docs/partials/index.html
@@ -15,7 +15,7 @@
                             <sup>1</sup>
                         </a>
                         <a class="btn btn-primary btn-outline-inverse btn-lg" target="_blank"
-                            href="https://sourceforge.net/projects/eclipse-cs/files/latest/download" title="Download the latest release as update site archive">
+                            href="https://bintray.com/eclipse-cs/eclipse-cs/update-site-archive/_latestVersion" title="Download the latest release as update site archive">
                             <i class="fa fa-download">
                             </i>
                             Download
