--- a/docs/partials/custom-checks.html
+++ b/docs/partials/custom-checks.html
@@ -52,8 +52,7 @@
                 good idea to include this document type declaration to your metadata file: </p>
             <pre><code>&lt;!DOCTYPE checkstyle-metadata
     PUBLIC &quot;-//eclipse-cs//DTD Check Metadata 1.1//EN&quot;
-    &quot;http://eclipse-cs.sourceforge.net/dtds/checkstyle-metadata_1_1.dtd&quot;&gt;
-                </code></pre>
+    &quot;http://eclipse-cs.sourceforge.net/dtds/checkstyle-metadata_1_1.dtd&quot;&gt;</code></pre>
             <p>This way you can validate your metadata file against the dtd using your preferred XML editor.</p>
             <p> The dtd file itself contains an abundance of documentation on the tags and their attributes, further
                 further practical reference you may want to peek into the <code>net.sf.eclipsecs.checkstyle</code>
