--- a/net.sf.eclipsecs.doc/src/main/resources/partials/install.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/install.html
@@ -44,7 +44,7 @@
         <div class="panel-body">
             <ol>
                 <li>Within Eclipse go to: <em>Help -> Install New Software...</em></li>
-                <li>Enter the following update site url: <code>https://checkstyle.github.io/eclipse-cs/update</code></li>
+                <li>Enter the following update site url: <code>https://checkstyle.org/eclipse-cs/update</code></li>
                 <li>Select the Eclipse Checkstyle Plugin feature to install</li>
                 <li>Conclude the installation as described above</li>
             </ol>
