--- a/net.sf.eclipsecs.doc/src/main/resources/partials/install.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/install.html
@@ -56,11 +56,14 @@
         <div class="panel-body">
             <p>
                 <a class="btn btn-primary btn-outline-inverse btn-lg" target="_blank"
-                    href="https://sourceforge.net/projects/eclipse-cs/files/latest/download"><i class="fa fa-download"
+                    href="https://bintray.com/eclipse-cs/eclipse-cs/update-site-archive/_latestVersion"><i class="fa fa-download"
                     > </i> Download latest</a>
                 <a class="btn btn-default btn-outline-inverse btn-lg" target="_blank"
-                    href="http://sourceforge.net/projects/eclipse-cs/files/Eclipse%20Checkstyle%20Plug-in/"> Download
+                    href="https://bintray.com/eclipse-cs/eclipse-cs/update-site-archive/"> Download
                     older release <i class="fa fa-external-link"> </i></a>
+                <a class="btn btn-default btn-outline-inverse btn-lg" target="_blank"
+                    href="http://sourceforge.net/projects/eclipse-cs/files/Eclipse%20Checkstyle%20Plug-in/"> Download
+                    ancient releases <i class="fa fa-external-link"> </i></a>
             </p>
             <ol>
                 <li>Download a Eclipse Checkstyle Plugin update site bundle</li>
