--- a/docs/partials/index.html
+++ b/docs/partials/index.html
@@ -8,7 +8,7 @@
                     <p style="margin-bottom: 5px;">
                         <a class="btn btn-primary btn-outline-inverse btn-lg" target="_blank"
                             href="http://marketplace.eclipse.org/marketplace-client-intro?mpc_install=150"
-                            title="Drag and drop this link into a running Eclipse Indigo/Juno/Kepler/Luna/Mars/Neon/Oxygen workspace to install the Eclipse Checkstyle Plugin">
+                            title="Drag and drop this link into a running Eclipse (&gt;Indigo) workspace to install the Eclipse Checkstyle Plugin">
                             <i class="fa fa-plug">
                             </i>
                             Install
@@ -31,12 +31,12 @@
                     <small>
                         <sup>1 </sup>
                         Install via Eclipse Marketplace. Drag and drop this link into a running Eclipse
-                        Indigo/Juno/Kepler/Luna/Mars/Neon workspace
+                        (&gt;Indigo) workspace
                     </small>
                     <br />
                     <small>
                         <sup>2 </sup>
-                        Latest release 8.11.0, based on Checkstyle 8.11, see
+                        Latest release 8.12.0, based on Checkstyle 8.12, see
                         <a href="#!/releasenotes">release notes</a>
                     </small>
                 </div>
